2026-01-29T01:47:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21462471644 # 861
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-29
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: next accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-16 2025-12-17 2025-12-18 2025-12-19 2025-12-20 2025-12-21 2025-12-22 2025-12-23 2025-12-24 2025-12-25 2025-12-26 2025-12-27 2025-12-28] / []

2025-12-31T01:27:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20609764749 # 855
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-31
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 36 135 / 37 136
* notice: next accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-10] / []

2025-11-11T01:22:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19251724131 # 805
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-11
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 35 134 / 36 135
* notice: next accum: outdated-unq outdated-all / unq all: 36 135 / 37 136
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-10-05] / [2025-11-10]
