@@ -1,3 +1,12 @@
+2026-01-30T01:47:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21501439660 # 862
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-30
+* notice: last 14d: unq all: 0 0
+* notice: prev accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
+* notice: next accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-12-29 2025-12-30 2025-12-31 2026-01-01 2026-01-02 2026-01-03 2026-01-04 2026-01-05 2026-01-06 2026-01-07 2026-01-08 2026-01-09 2026-01-10 2026-01-11] / []
+
 2026-01-29T01:47:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21462471644 # 861
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-29
